<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/rootLayout"
              android:layout_width="280dp"
              android:layout_height="match_parent"
              android:background="@color/common_google_signin_btn_text_dark_default"
              android:orientation="vertical"
              android:visibility="invisible">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/placeDetailsScrollView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/textViewColumnName"
                            android:text="@string/column_name"
                            style="@style/columnHeader"/>

                    <TextView
                            android:id="@+id/nameTextView"
                            style="@style/columnPlaceInfoDataStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/column_address"
                            android:id="@+id/textViewColumnAddress"
                            style="@style/columnHeader"/>

                    <TextView
                            android:id="@+id/addressTextView"
                            style="@style/columnPlaceInfoDataStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/column_types"
                            android:id="@+id/textViewColumnTypes"
                            style="@style/columnHeader"/>

                    <TextView
                            android:id="@+id/typesTextView"
                            style="@style/columnPlaceInfoDataStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/column_url"
                            android:id="@+id/textViewColumnURL"
                            style="@style/columnHeader"/>

                    <TextView
                            android:id="@+id/URLTextView"
                            android:autoLink="web"
                            style="@style/columnPlaceInfoDataStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/columnRating"
                            android:id="@+id/textViewColumnRating"
                            style="@style/columnHeader"/>

                    <TextView
                            android:id="@+id/raitingTextView"
                            style="@style/columnPlaceInfoDataStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/column_phone"
                            android:id="@+id/textViewColumnPhone"
                            style="@style/columnHeader"/>

                    <TextView
                            android:id="@+id/phoneTextView"
                            style="@style/columnPlaceInfoDataStyle"/>
                </LinearLayout>
            </LinearLayout>

            <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_loader_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lottie_fileName="loading.json"
                    app:lottie_loop="false"
                    app:lottie_autoPlay="true"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageIV"
                    android:visibility="gone"
                    android:minHeight="150dp"
                    android:maxHeight="150dp"
                    android:maxWidth="150dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>